Added DeleteProfile API with archive support
